# seven-solver

./: Cargo.toml
boards/: 20241016.json  20241017.json  20241018.json  20241019.json  20241020.json  20241021.json  20241022.json  20241023.json  20241024.json  20241025.json  20241026.json  20241027.json  20241028.json  20241029.json  20241030.json  20241031.json  20241101.json  20241102.json  20241103.json  20241104.json  20241105.json  20241106.json  20241107.json  20241108.json  20241109.json  20241110.json  20241111.json  20241112.json  20241113.json  20241114.json  20241115.json  20241116.json  20241117.json  20241118.json  20241119.json  20241120.json  20241121.json  20241122.json  20241123.json  20241124.json  (+18 more)
resources/: 7x7-word-list-sevens-only.txt  7x7words.txt  get-words.py
src/: board.rs  dictionary.rs  main.rs
